package com.petwaregames.bbw.base;

import java.awt.event.InputEvent;

public interface AcceptsUserInput {
    void onUserInput(InputEvent event);
}
