package com.petwaregames.bbw.base;

public class Sound {

    public Sound(String filename){

    }

    public void playInBackground(){

    }

    public void play(){

    }
}
