package com.petwaregames.bbw.powerup;

public class Pumpkin {
}
