package com.petwaregames.bbw.powerup;

public class Treats {
}
